// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldSelectControlled > renders inside of model context 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    autocomplete="off"
    class="form-select"
    id="dummy"
    name="dummy"
    path="dummy"
  />
</DocumentFragment>
`;

exports[`FieldSelectControlled > renders with title 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    autocomplete="off"
    class="form-select"
    id="dummy"
    name="dummy"
    path="dummy"
  >
    <option
      disabled=""
      value="-1"
    >
      Test Title
    </option>
    <option
      value="a"
    >
      Option A
    </option>
    <option
      value="b"
    >
      Option B
    </option>
  </select>
</DocumentFragment>
`;

exports[`FieldSelectControlled > renders with title and no options 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    autocomplete="off"
    class="form-select"
    id="dummy"
    name="dummy"
    path="dummy"
  >
    <option
      disabled=""
      value="-1"
    >
      Test Title
    </option>
  </select>
</DocumentFragment>
`;

exports[`FieldSelectControlled > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
